fixes login expires error; put profile
check login status on startup

--- a/index.html
+++ b/index.html
@@ -63,7 +63,29 @@
 		</div>
 		<div id="main-feature" class="col-md-11">
 			<div id="profile-panel" class="well">
-				to be profile
+                <div class="row">
+                    <div class="col-md-4">
+                        <div id="profile-face-thumb">
+                            <img width="160" height="160">
+                        </div>
+                        <span>Joined on </span>
+                        <time class="join-date" id="join-date" day="numeric" is="local-time" month="short" year="numeric" title=""></time>
+                    </div>
+                    <div class="col-md-8">
+                        <div>
+                            name: 
+                            <span id="profile-name"></span>
+                        </div>
+                        <div>
+                            Intro:
+                            <span id="profile-intro"></span>
+                        </div>
+                        <div>
+                            
+                        </div>
+                    </div>
+                </div>
+                
 			</div>
 			<div id="post-panel" class="well">
 				to be post
