show user join date; put photo upload

--- a/index.html
+++ b/index.html
@@ -67,9 +67,17 @@
                     <div class="col-md-4">
                         <div id="profile-face-thumb">
                             <img width="160" height="160">
+                            
+                            <div class="float-status">
+                                <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
+                                Upload a picture!
+                            </div>
+                            <div id="upload-profile-face" class="float-status">
+                                <file class="off"></file>
+                            </div>
                         </div>
                         <span>Joined on </span>
-                        <time class="join-date" id="join-date" day="numeric" is="local-time" month="short" year="numeric" title=""></time>
+                        <span id="prfile-join-date"></span>
                     </div>
                     <div class="col-md-8">
                         <div>
