--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
                     <div class="col-md-4">
                         <div id="profile-face-thumb">
                             <img width="160" height="160">
-                            
                             <div class="float-status">
-                                <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
-                                Upload a picture!
-                            </div>
-                            <div id="upload-profile-face" class="float-status">
-                                <file class="off"></file>
+                                <div id="upload-face-img">
+                                    <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
+                                    <div class="float-buttom">
+                                        Upload a picture
+                                        <input type="file" />
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <span>Joined on </span>
@@ -85,8 +86,8 @@
                             <span id="profile-name"></span>
                         </div>
                         <div>
-                            Intro:
-                            <span id="profile-intro"></span>
+                            Information:
+                            <div id="profile-intro"></div>
                         </div>
                         <div>
                             
