add dev feature "publish" to let user access contact

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-md-8">
                         <div>
-                            name: 
+                            Account: 
                             <span id="profile-name"></span>
                         </div>
                         <div>
@@ -155,8 +155,8 @@
 					</div>
 					
 					<!-- patch add contact button-->
-					<button type="button" id="p-c-add" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#p-add-contact-form" title="Patch Add">
-						<span class="glyphicon glyphicon-import" aria-hidden="true"></span> Patch Add
+					<button type="button" id="p-c-add" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#p-add-contact-form" title="Patch Add (Development)">
+						<span class="glyphicon glyphicon-import" aria-hidden="true"></span> Patch Add (Dev
 					</button>
 
 					<!-- patch add contact form in Modal -->
@@ -180,6 +180,10 @@
 							</div>
 						</div>
 					</div>
+
+					<button type="button" id="publish-contacts" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Publish Contacts (Development), it means to publish all contacts to let all users accessing them. It will execute right away you click it.">
+						<span class="glyphicon glyphicon-share" aria-hidden="true"></span> Publish Contacts (Dev
+					</button>
 
 					<div class="contacts-search">
 						<div class="form-group">
