refactor "User" with simple mvc; add extends.baasbox.js for baasbox api extensions

--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
 <script src="js/libs/bootstrap.js"></script>
 <script src="js/libs/doT.js"></script>
 <script src="js/baasbox.js"></script>
+<script src="js/extends.baasbox.js"></script>
 <script src="js/extends.jquery.js"></script>
 <script src="js/scripts.js"></script>
 <script src="js/users.js"></script>
