--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<li><a href="#" id="change-password">Change password</a></li>
                             <li><a href="#" id="user-list">User list</a></li>
                             <li><a href="#" id="change-username">Change user name</a></li>
+							<li><a href="#" id="collection">Collections</a></li>
 						</ul>
 					</div>
 						
@@ -348,7 +349,30 @@
     </div>
     <button type="button" class="btn btn-lg btn-info btn-block" id="exit-user-list-btn">Back</button>
 </div>
-    
+
+<div class="container off" id="collection-form">
+	<div class="row head-operations">
+		<h2><i class="fa fa-files-o fa-fw black"></i> Collections</h2>
+	</div>
+    <div data-role="controlgroup" data-type="horizontal">
+        <button type="button" class="btn btn-primary btn-sm" id="list-collections-btn" >List-Collections</button>
+        <button type="button" class="btn btn-primary btn-sm" id="add-collection-btn" >Add-Collection</button>
+        <button type="button" class="btn btn-primary btn-sm" id="del-collection-btn" >Delete-Collection</button>
+        <input type="text" id="new-collection-username">
+    </div>
+    <div class="btn-group">
+        <button type="button" class="btn btn-default" title="">&nbsp;<span id="collection-name"></span></button>
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu" id="collection-list" role="menu">
+            <li class="divider"></li>
+        </ul>
+    </div>
+    <button type="button" class="btn btn-info btn-block" id="exit-collections-btn">Back</button>
+</div>
+
 <div class="container off" id="change-username-form">
     <div class="form-user" role="form">
         <h1 style="text-align:center">change user name</h1>
