add count documents feature

--- a/index.html
+++ b/index.html
@@ -355,7 +355,6 @@
 		<h2><i class="fa fa-files-o fa-fw black"></i> Collections</h2>
 	</div>
     <div data-role="controlgroup" data-type="horizontal">
-        <button type="button" class="btn btn-primary btn-sm" id="list-collections-btn" >List-Collections</button>
         <button type="button" class="btn btn-primary btn-sm" id="add-collection-btn" >Add-Collection</button>
         <button type="button" class="btn btn-primary btn-sm" id="del-collection-btn" >Delete-Collection</button>
         <input type="text" id="new-collection-username">
@@ -370,6 +369,13 @@
             <li class="divider"></li>
         </ul>
     </div>
+    <div>
+        <div>
+            <label>Number of documents :</label> 
+            <label id="document_count">&nbsp;</label>
+        </div>
+    </div>
+    
     <button type="button" class="btn btn-info btn-block" id="exit-collections-btn">Back</button>
 </div>
 
