Add beautify library for template

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/styles-contacts.css">
+    <link rel="stylesheet" href="css/codemirror.css">
 </head>
 
 <body>
@@ -457,10 +458,11 @@
 <script src="js/contacts.js"></script>
 <script src="js/debug.js"></script>
 
-<link href="js/libs/codemirror/lib/codemirror.css" rel="stylesheet">
 <script src="js/libs/codemirror/lib/codemirror.js"></script>
 <script src="js/libs/codemirror/mode/javascript/javascript.js"></script>
+<script src="js/libs/beautify.js"></script>
 <script src="js/import.js"></script>
+
 
 </body>
 </html>
