Add updatefield feature

--- a/index.html
+++ b/index.html
@@ -390,6 +390,13 @@
         <button type="button" class="btn btn-primary btn-sm" id="grant-object-btn"> Grant access</button>
         <button type="button" class="btn btn-primary btn-sm" id="revoke-object-btn"> Revoke access</button>
     </div>
+    <br> </br>
+    <div id="access-control-field">
+        Id: <input id="acf-document"/> 
+        Fieldname: <input id="acf-name"/> 
+        Data: <input id="acf-data"/>
+        <button type="button" class="btn btn-primary btn-sm" id="update-field-btn">UpdateFiled</button>
+    </div>
     <button type="button" class="btn btn-info btn-block" id="exit-collections-btn">Back</button>
 </div>
 
