--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="container off" id="app">
 	<div class="row head-operations">
-		<div class="col-md-1 logo">{Logo}</div>
+		<div class="col-md-1 logo">{No Logo}</div>
 		<div class="col-md-11">
             <div class="navbar-form">
 				<div class="form-group">
@@ -306,6 +306,7 @@
 			</div>
 		</div>
 		<button class="btn btn-lg btn-info btn-block" id="signup-gate">Sign up</button>
+		<button class="btn btn-facebook btn-primary btn-sm" href="#" id="fb-login"><i class="icon-facebook"></i> Login with facebook </button>
 	</div>
 </div>
 
