add tip to fb login button

--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@
 			</div>
 		</div>
 		<button class="btn btn-lg btn-info btn-block" id="signup-gate">Sign up</button>
-		<button class="btn btn-facebook btn-primary btn-sm" href="#" id="fb-login"><i class="icon-facebook"></i> Login with facebook </button>
+		<br />
+		test <button class="btn btn-facebook btn-primary btn-sm" href="#" id="fb-login" title="social login is testing" ><i class="icon-facebook"></i> Login with facebook </button>
 	</div>
 </div>
 
