--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@ function signinCallback(authResult) {
 							<span class="sr-only">Toggle Dropdown</span>
 						</button>
 						<ul class="dropdown-menu" role="menu">
-							<li class="divider"></li>
 							<li><a href="#" id="signout">Sign out</a></li>
 							<li><a href="#" id="change-password">Change password</a></li>
-                            <li><a href="#" id="user-list">User list</a></li>
                             <li><a href="#" id="change-username">Change user name</a></li>
+                            <li><a href="#" id="my-files">My files</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#" id="user-list">User list</a></li>
 							<li><a href="#" id="collection">Collections</a></li>
                             <li><a href="#" id="REST-API-access">REST API access</a></li>
                             <li><a href="#" id="API-settings">API setting</a></li>
@@ -340,6 +341,25 @@ function signinCallback(authResult) {
                     	</div>
                     </div>
                     <div class="modal-footer" style="clear:both">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="files-form" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                        	<span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                        </button>
+                        <h4 class="modal-title" id="">My Files</h4>
+                    </div>
+                    <div class="modal-body">
+                        <textarea id="files-output" style="width: 300px; height: 600px;"></textarea>
+                        <button id="refresh-files">Refresh</button>
+                    </div>
+                    <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
@@ -671,17 +691,18 @@ function signinCallback(authResult) {
 <script src="js/baasbox.js"></script>
 <script src="js/extends.baasbox.js"></script>
 <script src="js/extends.jquery.js"></script>
-<script src="js/scripts.js"></script>
-<script src="js/users.js"></script>
-<script src="js/profile.js"></script>
-<script src="js/contacts.js"></script>
-<script src="js/debug.js"></script>
 
 <script src="js/libs/codemirror/lib/codemirror.js"></script>
 <script src="js/libs/codemirror/mode/javascript/javascript.js"></script>
 <script src="js/libs/beautify.js"></script>
 <script src="js/import.js"></script>
 
+<script src="js/scripts.js"></script>
+<script src="js/users.js"></script>
+<script src="js/profile.js"></script>
+<script src="js/contacts.js"></script>
+<script src="js/files.js"></script>
+<script src="js/debug.js"></script>
 
 </body>
 </html>
