--- a/index.html
+++ b/index.html
@@ -357,7 +357,21 @@ function signinCallback(authResult) {
                     </div>
                     <div class="modal-body">
                         <textarea id="files-output" style="width: 300px; height: 600px;"></textarea>
-                        <button id="refresh-files">Refresh</button>
+                        <button id="fetch-files">Get all</button>
+                        <p>
+                    		Id: <input id="file-id"/> <button id="fetch-one-file">Get one</button>
+            				<br />
+                    		<button type="button" class="btn btn-primary btn-sm" id="grant-file"> Grant </button> |
+					        <button type="button" class="btn btn-primary btn-sm" id="revoke-file"> Revoke </button>
+                    		Permission <input id="file-ac-permission" value="read" />
+                    		on 
+					        <input type="radio" name="permissions-on" value="role" checked="checked"> role </input> |
+					        <input type="radio" name="permissions-on" value="user"> user </input>
+					        <input id="file-ac-target" value="ANONYMOUS" />
+					    	
+					        <br />
+				        	<button type="button" class="btn btn-primary btn-sm" id="delete-file"> Delete it</button>
+                        </p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
